# RLGamePolicyExecutor

./: README.md  pyproject.toml
src/rlg_policy_executor/: __init__.py  rlg_policy_executor.py
tests/: test_omnigym_policy.py  test_train_config.yaml  test_weight.pth
