[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlg_policy_executor"
version = "0.0.2"
authors = [
  { name="Haoran Sun", email="hrsun@cs.hku.hk" },
]
description = "The package is used to execute the policy trained using rl_games without initializing simulation environments, given the observation vectors."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlanSunHR/RLGamePolicyExecutor"
"Bug Tracker" = "https://github.com/AlanSunHR/RLGamePolicyExecutor/issues"